# droidcamera

./: .gitignore  README.md  droidcamera.c  droidcamera.h  droidcamera_plugin.c  meson.build  meson_options.txt  testapp.c  unittest.c  utils.c
rpm/: droidcamera-plugin.spec  droidcamera.spec
